--- a/upload-v2.html
+++ b/upload-v2.html
@@ -232,11 +232,11 @@
 
         <div class="panel">
             <h2>Upload PDFs</h2>
-            <p>File name format: <code>CharacterName_VoiceID.pdf</code></p>
+            <p>File name format: <code>VoiceID_BP1A_CharacterName.pdf</code></p>
             <ul>
-                <li>Example: <code>WalterWhite_abc123xyz.pdf</code></li>
-                <li>Example: <code>SaulGoodman_def456uvw.pdf</code></li>
-                <li>Example: <code>SlippinJimmy_eT3X4VCP0uNoyW4G4qHy.pdf</code></li>
+                <li>Example: <code>abc123xyz_BP1A_WalterWhite.pdf</code></li>
+                <li>Example: <code>def456uvw_BP1A_SaulGoodman.pdf</code></li>
+                <li>Example: <code>eT3X4VCP0uNoyW4G4qHy_BP1A_SlippinJimmy.pdf</code></li>
             </ul>
 
             <form id="uploadForm">
